@@ -2,6 +2,6 @@
 #define ELOADER_LOADER
 
 // HBL stubs size
-#define NUM_HBL_IMPORTS 0x2b
+#define NUM_HBL_IMPORTS 0x2c
 
 #endif
